nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: apps-nginx-persistent-test
  name: nginx-persistent-test
  annotations: {}
  labels:
    app: nginx-persistent-test
spec:
  selector:
    matchLabels:
      app: nginx-persistent-test
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-persistent-test
    spec:
      volumes:
      - name: pers-storage
        persistentVolumeClaim:
          claimName: nginx-persistent-test      
      containers:
        - name: container
          image: 'nginx:latest'
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: pers-storage
              mountPath: /usr/share/nginx/html
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  paused: false
