nginx-service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-persistent-test
  namespace: apps-nginx-persistent-test
spec:
  ports:
    - name: nginx-http
      protocol: TCP
      port: 8080
      targetPort: 80
  selector:
    app: nginx-persistent-test
